--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ body {
     text-align: center;
 }
 
-.form_reg {
+.form-reg {
     margin: auto;
     padding-top: 10px;
     padding-bottom: 10px;
